# web-adapter

./: .gitignore  README.md  pyproject.toml
samples/: sample_web_adapter.py
tests/: test_web_adapter.py
web_adapter/: __init__.py  web_adapter.py
web_adapter/materials/: __init__.py  element_hint.py  html.py  type.py  url.py
