[tool.poetry]
name = "web-adapter"
version = "0.1.3"
description = ""
authors = ["TomoyaFujita2016 <fujita.t.2016c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
webdriver-manager = "^3.7.1"
selenium = "^3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
